# ArknightsWordCount

./: .gitattributes  .gitignore  LICENSE  README.md  config.py  main.py  parse_Arknights_gamedata.py  pyproject.toml
.github/actions/: auto-update.yaml
.github/actions/auto-update/: action.yaml
.github/actions/download-fonts/: action.yaml
.github/actions/prepare-dependences/: action.yaml
.github/workflows/: static.yml  update on schedule.yaml  update.yaml
docs/: Arknights_Word_Count.htm  Arknights_Word_Count.xlsx  Arknights_Word_Count_20230917.htm  arknights-word-count.json  arknights-word-count.xlsx  arknights-word-count_20231101.xlsx  arknights-word-count_20231102.xlsx  arknights-word-count_20231205.xlsx  arknights-word-count_20240109.xlsx  arknights-word-count_20240201.xlsx  arknights-word-count_20240307.xlsx  arknights-word-count_20240411.xlsx  arknights-word-count_20240412.xlsx  arknights-word-count_20240413.xlsx  arknights-word-count_20240501.xlsx  arknights-word-count_20240605.xlsx  arknights-word-count_20240709.xlsx  index.html
docs/Arknights_Word_Count.files/: filelist.xml  sheet002.htm  sheet003.htm  sheet004.htm  sheet005.htm  sheet006.htm  sheet007.htm  sheet008.htm  stylesheet.css  tabstrip.htm
docs/Arknights_Word_Count_20230917.files/: filelist.xml  sheet002.htm  sheet003.htm  sheet004.htm  sheet005.htm  sheet006.htm  sheet007.htm  sheet008.htm  stylesheet.css  tabstrip.htm
docs/website/: arknights-word-count_20240716.xlsx  index.html
game_data/: __init__.py  base.py  count.py  data.py  dump.py  excel.py  game_data.py  parse.py  utils.py
