[tool.poetry]
name = "arknights-word-count"
version = "3.3.0"
description = "《明日方舟》字词统计"
authors = ["Shawn Sun <lengyanyu258@outlook.com>"]
license = "MIT"
readme = "README.md"

# https://python-poetry.org/docs/dependency-specification/#version-constraints
[tool.poetry.dependencies]
python = "~3.11.9"
tqdm = "*"
zhon = "*"
XlsxWriter = "^3.2.0"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
black = "*"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
