[project]
name = "arknights-word-count"
version = "4.0.0"
dependencies = [
    "pillow>=12.2.0",
    "tqdm>=4.67.3",
    "xlsxwriter>=3.2.9",
    "zhon>=2.1.1",
]
requires-python = ">=3.14"
authors = [{ name = "Shawn Sun", email = "lengyanyu258@outlook.com" }]
description = "《明日方舟》字词统计"
readme = "README.md"
license = "MIT"

[tool.uv]
required-version = ">=0.11"
package = false

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = ["ruff>=0.15.12"]
